Se avanza concluyendo el tab de busqueda

--- a/Ionic/05-peliculasApp/src/app/components/slideshow-backdrop/slideshow-backdrop.component.html
+++ b/Ionic/05-peliculasApp/src/app/components/slideshow-backdrop/slideshow-backdrop.component.html
@@ -1,7 +1,5 @@
-<ion-slides [options]="slidesOpt">
-  <ion-slide *ngFor="let pelicula of peliculasRecientes">
-    <ion-card>
-      <img [src]="pelicula.backdrop_path | imagen" [alt]="pelicula.title">
-    </ion-card>
+<ion-slides [options]="slidesOpts">
+  <ion-slide *ngFor="let pelicula of peliculas">
+    <ion-card (click)="mostraDetalle(pelicula)"><img [src]="pelicula.backdrop_path | imagen" [alt]="pelicula.title" /></ion-card>
   </ion-slide>
 </ion-slides>
