--- a/Ionic/05-peliculasApp/src/app/tab1/tab1.page.html
+++ b/Ionic/05-peliculasApp/src/app/tab1/tab1.page.html
@@ -1,24 +1,31 @@
-<ion-content>
-
+<ion-content [fullscreen]="true">
   <ion-grid fixed>
     <ion-row>
       <ion-col>
-        <h2>Peliculas Nuevas</h2>
+        <h3>Películas Nuevas</h3>
       </ion-col>
     </ion-row>
   </ion-grid>
 
-  <app-slideshow-backdrop [peliculasRecientes]="peliculasRecientes" ></app-slideshow-backdrop>
+  <app-slideshow-backdrop [peliculas]="peliculasRecientes"></app-slideshow-backdrop>
 
   <ion-grid fixed>
     <ion-row>
       <ion-col>
-        <h2>Cartelera</h2>
+        <h3>Cartelera</h3>
       </ion-col>
     </ion-row>
   </ion-grid>
 
-  <app-slideshow-poster [peliculasRecientes]="peliculasRecientes"></app-slideshow-poster>
+  <app-slidesshow-poster [peliculas]="peliculasRecientes"></app-slidesshow-poster>
 
+  <ion-grid fixed>
+    <ion-row>
+      <ion-col>
+        <h3>Populares</h3>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 
+  <app-slideshow-pares [peliculas]="peliculasPopulares" (cargarMas)="cargarMas()"></app-slideshow-pares>
 </ion-content>
