--- a/Ionic/05-peliculasApp/src/app/tab2/tab2.page.html
+++ b/Ionic/05-peliculasApp/src/app/tab2/tab2.page.html
@@ -1,17 +1,51 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>
-      Tab 2
-    </ion-title>
+    <ion-title> Buscar Película </ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 2</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-toolbar>
+  <ion-searchbar
+    placeholder="Buscar Película"
+    animated
+    debounce="700"
+    [value]="textoBuscar"
+    (ionChange)="buscar($event)"
+  ></ion-searchbar>
+</ion-toolbar>
 
-  <app-explore-container name="Tab 2 page"></app-explore-container>
+<ion-content [fullscreen]="true">
+  <ion-grid *ngIf="cargando">
+    <ion-row>
+      <ion-col class="ion-text-center">
+        <ion-spinner name="dots"></ion-spinner>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
+  <ion-list *ngIf="peliculasBuscadas.length === 0">
+    <ion-list-header>
+      <ion-label>Sugerencias</ion-label>
+    </ion-list-header>
+    <ion-item *ngFor="let idea of ideas" (click)="textoBuscar=idea">
+      <ion-label color="primary"> {{idea}} </ion-label>
+    </ion-item>
+  </ion-list>
+
+  <ion-grid>
+    <ion-row>
+      <ion-col size="6" *ngFor="let pelicula of peliculasBuscadas">
+        <ion-card (click)="mostraDetalle(pelicula)">
+          <img [src]="pelicula.poster_path | imagen" [alt]="pelicula.title" />
+        </ion-card>
+        <ion-card-header>
+          <ion-card-subtitle> {{pelicula.release_date}} </ion-card-subtitle>
+        </ion-card-header>
+
+        <ion-card-content>
+          <h2>{{pelicula.title}}</h2>
+        </ion-card-content>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
