Se finaliza aplicación de peliculas

--- a/Ionic/05-peliculasApp/src/app/components/detalle/detalle.component.html
+++ b/Ionic/05-peliculasApp/src/app/components/detalle/detalle.component.html
@@ -85,7 +85,7 @@
 
     <ion-buttons slot="end">
       <ion-button (click)="favorito()">
-        <ion-icon name="star-outline" slot="end"></ion-icon>
+        <ion-icon [name]="star" slot="end"></ion-icon>
         <ion-label>Favorito</ion-label>
       </ion-button>
     </ion-buttons>
