--- a/Ionic/05-peliculasApp/src/app/components/slideshow-pares/slideshow-pares.component.html
+++ b/Ionic/05-peliculasApp/src/app/components/slideshow-pares/slideshow-pares.component.html
@@ -2,7 +2,7 @@
   <ion-slide *ngFor="let pares of peliculas | pares">
     <ion-row>
       <ion-col size="12" *ngFor="let pelicula of pares">
-        <ion-card (click)="mostraDetalle(pelicula)"
+        <ion-card mode="md" (click)="mostraDetalle(pelicula)"
           ><img [src]="pelicula.poster_path | imagen" [alt]="pelicula.title" class="poster"
         /></ion-card>
       </ion-col>
